# AMLDO

./: .coveragerc  .dockerignore  .env.example  .env.production.example  .env.staging.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  GUIA-APLICACOES.md  MIGRATION.md  README.md  activate_venv.sh  debug_import.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_setup.py
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml  lint.yml  tests.yml
.instructions/: FIX_LANGCHAIN_HUGGINGFACE.md  QUICK_START_SCRIPTS.md  README.md  SETUP_VENV_RAPIDO.md  SETUP_WINDOWS_RAPIDO.md  TROUBLESHOOTING_WINDOWS.md  WEBAPPS_GUIDE.md
LicitAI/backend/agents/: __init__.py  base_agent.py  compliance_agent.py  indexing_agent.py  ingestion_agent.py  orchestrator.py
LicitAI/backend/indexer/: indexer.py
LicitAI/backend/ingestion/: ingest.py
LicitAI/backend/rag/: rag_engine.py
LicitAI/backend/structure/: structure.py
LicitAI/docs/: frontend.md  setup.md
LicitAI/frontend/pages/: home.py
data/metrics/: metrics.db
data/vector_db/v1_faiss_vector_db/: index.faiss  index.pkl
docs/: 00-visao-geral.md  01-arquitetura-tecnica.md  02-pipeline-rag.md  03-estrutura-dados.md  04-guia-desenvolvedor.md  05-comandos-fluxos.md  06-estado-atual.md  07-casos-de-uso.md  08-melhorias-roadmap.md  09-comparacao-versoes.md  10-api-fastapi.md  11-testes-automatizados.md  12-ci-cd-deployment.md  INVENTARIO-MUDANCAS.md  PLANO-MIGRACAO.md  README.md  RESUMO-INTEGRACAO.md  VENV_GUIDE.md  VENV_GUIDE_WINDOWS.md
docs/visao-futuro/: 01-prd-requisitos-produto.md  02-analise-mercado.md  03-arquitetura-tecnica.md  04-modelo-dados.md  05-casos-de-uso.md  06-regras-negocio.md  07-especificacao-interface.md  08-guia-estilo.md  09-stack-tecnologica.md  10-roadmap-implementacao.md  README.md
docs/visao-futuro/diagramas/: 01-arquitetura-geral.md  02-modelo-er.md  03-fluxo-analise.md  04-casos-uso-uml.md  05-sequencia.md
docs/visao-futuro/prompts-imagens/: 01-telas-principais.md  02-fluxos-interacao.md  03-mobile-icones-extras.md  README.md
rag_v1/: __init__.py
rag_v2/: __init__.py  evalsetf63949.evalset.json
rag_v3/: __init__.py
requirements/: adk.txt  agents.txt  api.txt  base.txt  dev.txt  notebooks.txt  streamlit.txt
scripts/: README.md  README_SCRIPTS.md  deploy.sh  run.py  run_adk.sh  run_all.sh  run_amldo.sh  run_api.sh  run_both.sh  run_both_webapps.ps1  run_both_webapps.sh  run_matchit.sh  run_projeto2.sh  run_streamlit.sh  run_tests.sh  run_webapp_new.ps1  run_webapp_new.sh  run_webapp_old.ps1  run_webapp_old.sh
src/amldo/agents/: orchestrator.py
src/amldo/agents/specialized/: company_docs_agent.py  structuring_agent.py  validation_agent.py
src/amldo/core/: config.py  exceptions.py
src/amldo/interfaces/api/: __init__.py  dependencies.py  main.py  run.py
src/amldo/interfaces/api/models/: __init__.py  request.py  response.py
src/amldo/interfaces/api/routers/: __init__.py  metrics.py  query.py  upload.py
src/amldo/interfaces/api/static/css/: style.css
src/amldo/interfaces/api/templates/: chat.html  index.html  process.html
src/amldo/interfaces/streamlit/: app.py  theme.py
src/amldo/interfaces/streamlit/pages/: 01_Pipeline.py  02_RAG_Query.py
src/amldo/pipeline/: embeddings.py
src/amldo/pipeline/indexer/: indexer.py
src/amldo/pipeline/ingestion/: ingest.py
src/amldo/pipeline/structure/: structure.py
src/amldo/rag/v1/: __init__.py  agent.py  tools.py
src/amldo/rag/v2/: __init__.py  agent.py  tools.py
src/amldo/rag/v3/: __init__.py  agent.py  tools.py
src/amldo/utils/: metrics.py
src/scripts/: build_index.py  process_documents.py
tests/: README.md  conftest.py
tests/integration/: test_rag_pipeline.py
tests/unit/: test_api.py  test_config.py  test_embeddings.py  test_indexer.py  test_ingestion.py  test_metrics.py  test_rag_v3.py  test_structure.py
tmp_pkg/: langchain_google_genai-1.0.10-py3-none-any.whl
